--- a/src/Indexed.Everything.Tests/packages.config
+++ b/src/Indexed.Everything.Tests/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="AutoFixture" version="4.0.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
@@ -7,7 +6,9 @@
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
+  <package id="OpenCover" version="4.6.519" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
