--- a/src/Indexed.Everything.Tests/Indexed.Everything.Tests.csproj
+++ b/src/Indexed.Everything.Tests/Indexed.Everything.Tests.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -69,7 +70,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunkyFactoryTests\BuildGetSetFuncs_Should.cs" />
+    <Compile Include="FunkyFactoryTests\GetPropertyAccessorFuncs_Should.cs" />
     <Compile Include="FunkyFactoryTests\CompilePropertyMethods_Should.cs" />
     <Compile Include="FunkyFactoryTests\GetDefaultValue_Should.cs" />
     <Compile Include="GetSetPairTests\GetSetPairTests.cs" />
