--- a/src/Indexed.Everything.Tests/Indexed.Everything.Tests.csproj
+++ b/src/Indexed.Everything.Tests/Indexed.Everything.Tests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.1.18\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -61,6 +62,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -75,15 +77,16 @@
     <Compile Include="FunkyFactoryTests\GetDefaultValue_Should.cs" />
     <Compile Include="GetSetPairTests\GetSetPairTests.cs" />
     <Compile Include="IndexedTests\ContainsKey_Should.cs" />
+    <Compile Include="IndexedTests\Count_Should.cs" />
     <Compile Include="IndexedTests\Ctor_Should.cs" />
     <Compile Include="IndexedTests\GetEnumerator_Should.cs" />
     <Compile Include="IndexedTests\Get_Should.cs" />
-    <Compile Include="IndexedTests\Indexer_Should.cs" />
+    <Compile Include="IndexedTests\ExplicitCastOperator_Should.cs" />
     <Compile Include="IndexedTests\Set_Should.cs" />
     <Compile Include="IndexedTests\TryGetValue_Should.cs" />
+    <Compile Include="IndexedTests\Values_Should.cs" />
     <Compile Include="Misc\TestConst.cs" />
     <Compile Include="Misc\TestHelper.cs" />
-    <Compile Include="Misc\MockIndexed.cs" />
     <Compile Include="Misc\TestPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
