--- a/src/Indexed.Everything/Indexed.Everything.csproj
+++ b/src/Indexed.Everything/Indexed.Everything.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FunkyFactory.cs" />
     <Compile Include="GetSetPair.cs" />
     <Compile Include="Indexed.cs" />
+    <Compile Include="Extensions\ObjectCacheExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
